use output_subarea to catch other output formats

--- a/templates/ipython-notebook/-light.css.erb
+++ b/templates/ipython-notebook/-light.css.erb
@@ -36,6 +36,7 @@ div.input_area {
   border: 1px solid #<%= @base["05"]["hex"] %>;
 }
 div.output_area pre {font-weight: normal; color: #<%= @base["02"]["hex"] %>;}
+div.output_subarea {font-weight: normal; color: #<%= @base["02"]["hex"] %>;}
 
 .rendered_html table, .rendered_html th, .rendered_html tr, .rendered_html td {
   border: 1px  #<%= @base["03"]["hex"] %> solid;
